# sprohk

./: Cargo.toml  LICENSE  README.md
crates/ast/: Cargo.toml
crates/ast/src/: ast.rs  lib.rs  module.rs  node_data.rs  nodes.rs
crates/ast/src/nodes/: exprs.rs  ops.rs  statements.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  tokenizer.rs
crates/lexer/tests/: fn-with-cond.spk  idents-and-lits.spk  snapshots_test.rs
crates/lexer/tests/snapshots/: 00_idents-and-lits.golden  fn-with-cond.golden  idents-and-lits.golden
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs  parser.rs
crates/parser/tests/: fn_calls.spk  fn_decls.spk  multi_binop_with_prec.spk  multi_expr.spk  simple_binops.spk  snapshots_test.rs  statements.spk  value_exprs.spk  var_decl.spk
crates/parser/tests/snapshots/: fn_calls.golden  fn_decls.golden  multi_binop_with_prec.golden  multi_expr.golden  simple_binops.golden  statements.golden  value_exprs.golden  var_decl.data  var_decl.golden
crates/sprohk/: Cargo.toml
crates/sprohk/src/: main.rs
crates/sprohk/tests/: 00_idents-and-lits.spk
