[workspace]
members = [
    "crates/ast",
    "crates/core",
    "crates/lexer",
    "crates/parser",
    "crates/sprohk",
]
resolver = "3"
default-members = ["crates/sprohk"]

[workspace.package]
rust-version = "1.86"
edition = "2024"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }

[workspace.lints.rust]
dead_code = "allow"

[profile.dev]
debug = 1

[profile.release]
debug = 0
