[workspace]
members = [
    "crates/ast",
    "crates/core",
    "crates/lexer",
    "crates/parser",
    "crates/sprohk",
]
resolver = "3"
#default-members = ["crates/sprohk"]

[workspace.package]
rust-version = "1.86"
edition = "2024"

[workspace.dependencies]
bumpalo = { version = "3.19.0", features = ["collections", "default"] }
clap = { version = "4.5", features = ["derive"] }
phf = { version = "0.12.1", features = ["default", "macros"] }
pretty_assertions = { version = "1.4.1" }
smallvec = { version = "1.15.1" }

[workspace.lints.rust]
dead_code = "allow"

[profile.dev]
debug = 1

[profile.release]
debug = 0
