[package]
name = "sprohk_lexer"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
phf.workspace = true
sprohk_core = { path = "../core" }

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "lexer_snapshots"
path = "src/bin/gen_snapshots.rs"
