[package]
name = "sprohk_parser"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
sprohk_ast = { path = "../ast" }
sprohk_core = { path = "../core" }
sprohk_lexer = { path = "../lexer" }

bumpalo.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[[bin]]
name = "parser_snapshots"
path = "src/bin/gen_snapshots.rs"