[package]
name = "sprohk"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
default-run = "sprohk"

[lints]
workspace = true

[dependencies]
sprohk_core = { path = "../core" }
sprohk_parser = { path = "../parser" }

clap.workspace = true
bumpalo.workspace = true

[[bin]]
name = "sprohk"
path = "src/main.rs"
